--- a/tachometer_window.ui
+++ b/tachometer_window.ui
@@ -251,6 +251,47 @@
     <string>-40°c</string>
    </property>
   </widget>
+  <widget class="QSlider" name="rpm_slider">
+   <property name="geometry">
+    <rect>
+     <x>250</x>
+     <y>320</y>
+     <width>331</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="maximum">
+    <number>7000</number>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Horizontal</enum>
+   </property>
+  </widget>
+  <widget class="QSlider" name="gear_slider">
+   <property name="geometry">
+    <rect>
+     <x>70</x>
+     <y>70</y>
+     <width>16</width>
+     <height>160</height>
+    </rect>
+   </property>
+   <property name="minimum">
+    <number>-1</number>
+   </property>
+   <property name="maximum">
+    <number>5</number>
+   </property>
+   <property name="pageStep">
+    <number>1</number>
+   </property>
+   <property name="value">
+    <number>-1</number>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Vertical</enum>
+   </property>
+  </widget>
  </widget>
  <resources>
   <include location="psa-resources.qrc"/>
