--- a/tachometer_window.ui
+++ b/tachometer_window.ui
@@ -251,7 +251,7 @@
     <string>-40°c</string>
    </property>
   </widget>
-  <widget class="QSlider" name="rpm_slider">
+  <widget class="QSlider" name="speed_slider">
    <property name="geometry">
     <rect>
      <x>250</x>
@@ -261,7 +261,7 @@
     </rect>
    </property>
    <property name="maximum">
-    <number>7000</number>
+    <number>300</number>
    </property>
    <property name="orientation">
     <enum>Qt::Horizontal</enum>
@@ -858,6 +858,31 @@ QPushButton:default {
    </property>
    <property name="flat">
     <bool>true</bool>
+   </property>
+  </widget>
+  <widget class="QSlider" name="rpm_slider">
+   <property name="geometry">
+    <rect>
+     <x>230</x>
+     <y>29</y>
+     <width>20</width>
+     <height>281</height>
+    </rect>
+   </property>
+   <property name="minimum">
+    <number>0</number>
+   </property>
+   <property name="maximum">
+    <number>8000</number>
+   </property>
+   <property name="pageStep">
+    <number>50</number>
+   </property>
+   <property name="value">
+    <number>0</number>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Vertical</enum>
    </property>
   </widget>
  </widget>
